--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <form action="#" method="post">
           <div class="form_settings">
             <p><span>Ime</span><input class="contact" type="text" name="your_name" value="" /></p>
-            <p><span>Email Addresa</span><input class="contact" type="text" name="your_email" value="" /></p>
+            <p><span>Email Adresa</span><input class="contact" type="text" name="your_email" value="" /></p>
             <p><span>Upit</span><textarea class="contact textarea" rows="8" cols="50" name="your_enquiry"></textarea></p>
             <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="contact_submitted" value="Pošalji" /></p>
           </div>
